--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>gfrancine</title>
+    <title>Page Not Found</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -31,10 +30,11 @@
   </head>
   <body>
     <div class="main">
-      <p>Sarapan pagi pake roti sari</p>
-      <p>Jangan lupa taburkan coklat ceres</p>
-      <p>Anda tidak akan menemukan apa2 di sini</p>
-      <p>Karena websitenya masih work in progress 😙</p>
+      <h1>Error 404</h1>
+      <p>Asik-asik tarik tambang pas 17an</p>
+      <p>Tapi tim kita akhirnya kalah</p>
+      <p>Rupanya anda telah sesat di jalan</p>
+      <p>Coba cek apa linknya salah ☝</p>
     </div>
   </body>
 </html>
