--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
   </head>
   <body>
     <div class="main">
-      <p>Sarapan pagi pake roti sari</p>
-      <p>Jangan lupa taburkan coklat ceres</p>
-      <p>Anda tidak akan menemukan apa2 di sini</p>
-      <p>Karena websitenya masih work in progress 😙</p>
+      <p>Kosong</p>
     </div>
   </body>
 </html>
